public/css/tf-styles.css
/* ... */
@media screen and (min-width: 767) and (max-width: 1009px) {


}
/*************END OF SEARCH ITEM CONTAINER*****************/


.tf-user-flyover {
	width: 230px;
	background-color: #191818;
	border: 1px solid #2b2b2b;
	height: 180px;
	left: -105px;
    position: absolute;
    top: -190px;
    z-index: 100;
    border-radius: 5px;
}

.user-flyover {
	height: 25px;
    width: 25px;
}

.tf-user-flyover .arrow:after {
	border-top-color: #1C1C1C !important;
}

.user-flyover-container {
	text-align: center;
	height: 160px;
	padding: 2px;
}

.user-flyover-profile-info {
	height: 85px;
}

.user-flyover-content {
    padding: 15px 0px 0px 0px;
    text-align: center;
    height: 100%;
    width: 100%;
    min-height: 170px !important;
}

.user-flyover-profile-image img {
	margin: 0px 5px 0px 5px !important;
}

.user-flyover-profile-name {
    font-size: 14px;
    font-weight: 600;
    margin-bottom: 5px;
    height: 20px;
    overflow: hidden;
}

.user-flyover-follow-btn {
	padding-left: 45px;
	float: left;
	left: 65px !important;
	padding: 4px 15px !important;
}

.user-flyover-follow-btn .tf-follow-button{
	color: #FFFFFF;
    position: relative;
    width: 78px;
    height: 28px;
    text-align: center;
    padding: 3px;
    font-size: 12px;
    margin: 9px !important;
}

.user-flyover-profile-bio {
	font-weight: 600;
    color: #4b4b4b;
    height: 45px;
    line-height: 14px;
    font-size: 13px;
    overflow: hidden !important;
}

.arrow-down {
	border-left: 15px solid transparent;
    border-right: 15px solid transparent;
    border-top: 10px solid #252525;
    bottom: -10px;
    height: 0;
    left: 100px;
    position: absolute;
    width: 0;
}

.tf-loader {
	text-align: center;
	position:fixed;
	top:0px;
	right:0px;
	width:100%;
	height:100%;
	background-color:#666;
	background-image:url('/assets/img/loading_spinner.gif');
	background-repeat:no-repeat;
	background-position:center;
	z-index:10000000;
	opacity: 0.6;
	filter: alpha(opacity=40);
}

#tf-loader-region {
	height: 100px;
	width: 100%;
	position: fixed;
}

.tf-loader-small {
	text-align: center;
	position:fixed;
	top:0px;
	right:0px;
	width:100%;
	height:100%;
	background-color:#666;
	background-image:url('/assets/img/spinner.gif');
	background-repeat:no-repeat;
	background-position:center;
	z-index:10000000;
	opacity: 0.6;
	filter: alpha(opacity=40);
}

.tf-verified-symbol {
	height: 18px;
	width: 18px;
}

.tf-media-list-header {
	font-family: "Benton Sans Black", serif;
	font-weight: 100;
	text-align: center;
	margin-top: 40px !important;
	margin-bottom: 0px !important;
}

.tf-no-posts {
	width: 100%;
	text-align: center;
}

.tf-notification-right-panel h5 {
	margin-top: 0px !important;
	padding-top: 5px !important;
}

.tf-notification-right-panel .leaderboard {
	background-color: #1f1f1f;
    border-radius: 5px;
}

.inputor {  
  width: 90%;
  border: 1px solid #1f1f1f;
  padding: 5px 8px;
  outline: 0 none;
  margin: 0pc;
  background: #1f1f1f;
  color: #cec8c8;
  font-size: 14px;
  overflow-y: auto;
  cursor: text;
  height: 35px;
  margin-left: 20px;
}

ul.doc {
  list-style:none;
}

ul.doc li {
  display:inline-block;
  margin: 0 10px;
}

.atwho-inserted {
	background: LIGHTGRAY;
    height: 17px !important;
    padding: 4px;
    color: #1f1f1f;
    font-size: 12px;
    border-radius: 10px;
}

.atwho-view{
	border-radius: 1px;
	background: #DDD;
	font-family: "Georgia", san-serif;
	font-size: 13px;
}

.atwho-view ul {
	width: 450px;
}

.empty-msg-atwho {
  font-size: 13px;
  background: #FFF;
  padding: 6px;
  background-color: LIGHTGRAY;
  border: 1px solid #c1c1c1;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
  -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
  position: absolute;
  height: 32px;
  width: 450px;
  z-index: 20004;
  /* to show up over bimodal */
  text-align: center;
}

.tf-load-more-link {
	text-align: center;
	width: 100%
	height:35px;	
	color: #FFF;
	font-weight: bolder;
	font-size: 16px;
	text-transform: capitalize;
}

.tf-load-more-link a {
	color: #FFF;
	cursor: pointer;
	text-decoration: none;
}

.tf-load-more-link a:hover {
	cursor: pointer;
	text-decoration: none;
}

.tf-vote-el {
	display: block !important;
	width: 50px !important;
	margin-left: 25px;
	cursor: pointer;
}

.tf-vote-btn {
	width: 100%;
	text-align: center;
}

.tf-vote-count {
	width: 100%;
	text-align: center;
}

